// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Main Renders without exploding as .gallery 1`] = `
<main
  class="jsx-1845556999 gallery"
/>
`;

exports[`Component: Main Renders without exploding as .index 1`] = `
<main
  class="jsx-1845556999 index"
/>
`;
